# ReportMCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Prove_Agenti/: .env.example  main.py  prima_implementazione.md  requirements.txt
Prove_Agenti/agents/: openrouter_agent.py
Prove_Agenti/app/: config.py  db.py  server.py
Prove_Agenti/app/routers/: auth.py  chat.py
Prove_Agenti/static/: index.html
data/: report.db
src/: __init__.py  app.py  server.py
src/components/: __init__.py  renderer.py
src/models/: __init__.py  blueprint.py  data.py  exceptions.py
src/storage/: __init__.py  duckdb_manager.py
src/templates/: __init__.py  base.py  deep_dive.py  executive.py
tests/: __init__.py  populate_dashboard.py
